--- a/css/main.css
+++ b/css/main.css
@@ -139,12 +139,21 @@
 		padding: 0;
 	}
 
-	.hobby-icon i {
+	.resume-icon {
+		text-align: center;
+		border: 1px solid black;
+		border-radius: 20%;
+		height: 3em;
+		width: 3em;
+		padding: 0;
+	}
+
+	.hobby-icon i, .resume-icon i {
 		padding-top: 5px;
 		/*font-size: 1.10em;*/
 	}
 
-	.hobby-icon span {
+	.hobby-icon span, .resume-icon span {
 		/*font-size: 0.55em;*/
 		display: block;
 		position: relative;
