--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -3,8 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>www.deepakkumar.tech</title>
-    <link rel="icon" href="~/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="~/fav/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="~/fav/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="~/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="~/fav/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/fav/favicon-16x16.png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
