--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    @{ 
+        var hostUrl = $"{Context.Request.Scheme}://{Context.Request.Host}";
+    }
     <meta charset="utf-8">
     <title>www.deepakkumar.tech</title>
-    <link rel="icon" href="~/fav/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="~/fav/favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" sizes="32x32" href="~/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="~/fav/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="~/fav/favicon-16x16.png">
+    <link rel="icon" href="@hostUrl/fav/favicon.ico?v=1" type="image/x-icon">
+    <link rel="shortcut icon" href="@hostUrl/fav/favicon.ico?v=1" type="image/x-icon">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
