--- a/deepakkumar.tech/Pages/_Layout.cshtml
+++ b/deepakkumar.tech/Pages/_Layout.cshtml
@@ -7,8 +7,8 @@
     <base href="/"/>
     <meta charset="utf-8">
     <title>www.deepakkumar.tech</title>
-    <link rel="icon" href="@hostUrl/fav/favicon.ico?v=1" type="image/x-icon">
-    <link rel="shortcut icon" href="@hostUrl/fav/favicon.ico?v=1" type="image/x-icon">
+    <link rel="icon" href="@hostUrl/content/fav/favicon.ico?v=1" type="image/x-icon">
+    <link rel="shortcut icon" href="@hostUrl/content/fav/favicon.ico?v=1" type="image/x-icon">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="~/content/css/vendor/font-awesome.min.css">
